Fixed timeline alignment

--- a/src/css/less/timeline.less
+++ b/src/css/less/timeline.less
@@ -172,6 +172,11 @@
             float: none;
         }
 
+        .left {
+
+            padding: 0px;
+        }
+
         .offset-left {
 
             padding-left: 20px;
@@ -181,8 +186,7 @@
 
         .offset-right {
 
-            padding-left: 0px;
-            padding-right: 20px;
+            padding: 0px;
             text-align: right;
         }
     }
